# darkos

./: .gitignore  CMakeLists.txt  README.md  kernel.c  run_qemu.sh  toolchain.cmake
src/kernel/: CMakeLists.txt
src/kernel/i686/: flags.cmake  kernel.cpp
